@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 56;
+use Test::More tests => 57;
 use Test::Deep;
 use Test::Exception;
 use t::util;
@@ -28,14 +28,17 @@ my $schema = t::dbic_util->new->test_schema();
       create_md5
     );
   lives_ok {
-    $harold = npg_pipeline::pluggable::harold->new({
+    $harold = npg_pipeline::pluggable::harold->new(
       id_run => 1234,
       function_order => \@functions_in_order,
       run_folder => q{123456_IL2_1234},
       runfolder_path => $analysis_runfolder_path,
-    });
+    );
   } q{no croak on creation};
   isa_ok($harold, q{npg_pipeline::pluggable::harold}, q{$harold});
+
+  ok($harold->spider, 'spidering is on');
+
   push @functions_in_order, 'lsf_end';
   unshift @functions_in_order, 'lsf_start';
   is(join(q[ ], @{$harold->function_order()}), join(q[ ],@functions_in_order), q{function order set on creation and wrapped correctly});
@@ -58,9 +61,10 @@ $util->set_staging_analysis_area({with_latest_summary => 1});
       run_folder => q{123456_IL2_1234},
       function_order => [],
       runfolder_path => $analysis_runfolder_path,
+      spider         => 0,
     );
   ok(!$harold->interactive, 'start job will be resumed');
-  lives_ok { $harold->main() } 'main method with no functions defined runs ok';
+  lives_ok { $harold->main() } 'main method with no functions defined and no spider plugged in runs ok';
 
   is(scalar @{$harold->dispatch_tree->functions}, 2, 'two functions');
   is($harold->dispatch_tree->functions->[0]->{function}, 'lsf_start', 'first function is start');
@@ -71,10 +75,12 @@ $util->set_staging_analysis_area({with_latest_summary => 1});
       run_folder => q{123456_IL2_1234},
       runfolder_path => $analysis_runfolder_path,
       interactive => 1,
+      spider      => 0,
     );
   ok($harold->interactive, 'start job will not be resumed');
   lives_ok { $harold->main() } 'main method with no functions defined and no resume runs ok';
   is(scalar @{$harold->dispatch_tree->functions}, 2, 'two functions');
+
   local $ENV{NPG_WEBSERVICE_CACHE_DIR} = q[t/data];
   is (join( q[ ], $harold->positions), '1 2 3 4 5 6 7 8', 'positions array');
   is (join( q[ ], $harold->all_positions), '1 2 3 4 5 6 7 8', 'all positions array');
@@ -87,6 +93,7 @@ $util->set_staging_analysis_area({with_latest_summary => 1});
       runfolder_path => $analysis_runfolder_path,
       lanes => [1,2],
       no_bsub => 1,
+      spider  => 0,
     );
   is(scalar @{$harold->dispatch_tree->functions}, 0, 'no functions');
   $harold->main;
@@ -95,7 +102,8 @@ $util->set_staging_analysis_area({with_latest_summary => 1});
   is($harold->dispatch_tree->functions->[1]->{function}, $function, qq{first function is $function});
   is($harold->dispatch_tree->functions->[2]->{function}, 'lsf_end', 'third function is end');
   is($harold->dispatch_tree->functions->[2]->{job_dependencies}, q{-w'done(50)'}, 'end dependencies');
-  local $ENV{NPG_WEBSERVICE_CACHE_DIR} = q[t/data];
+
+  #local $ENV{NPG_WEBSERVICE_CACHE_DIR} = q[t/data];
   is (join( q[ ], $harold->positions), '1 2', 'positions array');
   is (join( q[ ], $harold->all_positions), '1 2 3 4 5 6 7 8', 'all positions array');
 
@@ -107,6 +115,7 @@ $util->set_staging_analysis_area({with_latest_summary => 1});
       resume_start_job => 0,
       lanes => [1,2],
       no_bsub => 1,
+      spider  => 0,
   );
   throws_ok { $harold->main} qr/Error submitting jobs: Can't locate object method "dodo" via package "npg_pipeline::pluggable::harold"/, 'error when non-existing function is in the function order';
 }
@@ -114,7 +123,7 @@ $util->set_staging_analysis_area({with_latest_summary => 1});
 {
   my $harold;
   lives_ok {
-    $harold = npg_pipeline::pluggable::harold->new({
+    $harold = npg_pipeline::pluggable::harold->new(
       script_name => q{test},
       id_run => 6588,
       lanes => [1..8],
@@ -122,7 +131,7 @@ $util->set_staging_analysis_area({with_latest_summary => 1});
       runfolder_path => $analysis_runfolder_path,
       npg_tracking_schema => $schema,
       no_bsub => 1,
-    });
+    );
   } q{no croak on creation};
 
   lives_ok {
@@ -138,12 +147,12 @@ $util->set_staging_analysis_area({with_latest_summary => 1});
 {
   my $qc;
   lives_ok {
-    $qc = npg_pipeline::pluggable::harold->new({
+    $qc = npg_pipeline::pluggable::harold->new(
       id_run => 1234,
       function_order => [qw(qc_qX_yield qc_insert_size)],
       run_folder => q{123456_IL2_1234},
       runfolder_path => $analysis_runfolder_path,
-    });
+    );
   } q{no croak on creation};
   $util->set_staging_analysis_area({with_latest_summary => 1});
   isa_ok($qc, q{npg_pipeline::pluggable::harold}, '$qc');
@@ -155,7 +164,7 @@ $util->set_staging_analysis_area({with_latest_summary => 1});
   my $qc;
   $util->set_staging_analysis_area();
   lives_ok {
-    $qc = npg_pipeline::pluggable::harold->new({
+    $qc = npg_pipeline::pluggable::harold->new(
       id_run => 1234,
       run_folder => q{123456_IL2_1234},
       function_order => [qw{qc_qX_yield qc_adapter qc_insert_size}],
@@ -163,12 +172,13 @@ $util->set_staging_analysis_area({with_latest_summary => 1});
       runfolder_path => $analysis_runfolder_path,
       no_bsub => 1,
       repository => q{t/data/sequence},
-    });
+      id_flowcell_lims => 2015,
+      spider           => 1,
+    );
   } q{no croak on new creation};
   mkdir $qc->archive_path;
   mkdir $qc->qc_path;
   lives_ok { $qc->main() } q{no croak running qc->main()};
-  local $ENV{NPG_WEBSERVICE_CACHE_DIR} = q[t/data];
   is (join( q[ ], $qc->positions), '4', 'positions array');
   is (join( q[ ], $qc->all_positions), '1 2 3 4 5 6 7 8', 'all positions array');
 }
